cart is completed
